1999-10-12  Ulrich Drepper  <drepper@cygnus.com>

	* internals.h: Correct return types for __libc_read and __libc_write.

1999-10-09  Andreas Jaeger  <aj@suse.de>

	* internals.h: Add __new_sem_post to get prototype in
	manager.c; include semaphore.h for needed types.

1999-10-08  Ulrich Drepper  <drepper@cygnus.com>

	* manager.c (__pthread_manager) [REQ_POST]: Use __new_sem_post
	directly instead of calling sem_post which should not be necessary
	but is faster and might help in some case to work around problems.
	Patch by khendricks@ivey.uwo.ca [libc/1382].

1999-10-08  Andreas Schwab  <schwab@suse.de>

	* sysdeps/pthread/Subdirs: New file.
	* Implies: Removed.

1999-10-07  Ulrich Drepper  <drepper@cygnus.com>

	* Implies: New file.
	* internals.h (struct _pthread_descr_struct): Add p_startfct.
	* manager.c (pthread_handle_create): Initialize p_startfct.
	* pthread.c: Define __linuxthread_pthread_sizeof_descr variable.

1999-09-25  Ulrich Drepper  <drepper@cygnus.com>

	* manager.c (__linuxthreads_pthread_threads_max): New variable.
	* specific.c (__linuxthreads_pthread_keys_max): New variable.
	(__linuxthreads_pthread_key_2ndlevel_size): New variable.

	* condvar.c (pthread_cond_timedwait_relative): Never return with
	EINTR.  Patch by Andreas Schwab.

1999-09-19  Ulrich Drepper  <drepper@cygnus.com>

	* signals.c (sigaction): Correct last patch.  Don't select
	pthread_sighandler_rt based on the signal number but instead of
	the SA_SIGINFO flag.

1999-09-23  Ulrich Drepper  <drepper@cygnus.com>

	* specific.c: Move definitions of struct pthread_key_struct and
	destr_function to ...
	* internals.h: ...here.

1999-09-18  Ulrich Drepper  <drepper@cygnus.com>

	* pthread.c (pthread_handle_sigrestart_rt): New function.  Use
	this instead of pthread_handle_sigrestart if the signal is an RT
	signal.

	* signals.c: Handle passing through of sighandler arguments also
	for real-time signals.

1999-09-03  Andreas Schwab  <schwab@suse.de>
